Added more partners, Changed the careers submition criteria,added team photos and changed the hero images, added policy pages

--- a/impact.html
+++ b/impact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="See the impact Savanna Circuit is making across Africa. Read stories from the field, latest updates, and download impact reports.">
-    <meta name="keywords" content=" unbroken Cold chain impact, Agricultural decarbonization, social impact, agricultural impact, farmer stories, sustainability, Savanna Circuit impact">
+    <meta name="keywords" content="Cold chain impact, agricultural decarbonization, Unbroken Cold chain impact, social impact, agricultural impact, farmer stories, sustainability, Savanna Circuit impact">
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
@@ -41,7 +41,7 @@
 
     <!-- Content is inside a protective "Glass" card -->
     <div class="hero-lead-card">
-        <h1>Our Impacts</h1>
+        <h1>Impact</h1>
         <p>Transforming lives and livelihoods across Africa</p>
     </div>
 </section>
@@ -64,7 +64,7 @@
     <section id="overview" class="impact-overview-section">
         <div class="section-container">
             <h2>Overview</h2>   
-            <p>Since our inception, Savanna Circuit has been dedicated to improving the livelihoods of smallholder farmers across Kenya. Our innovative, unbroken cold chain solutions have enabled farmers to reduce post-harvest losses, increase their income, and access new markets. Through partnerships with local organizations and governments, we have expanded our reach to over 50,000 farmers in 10 counties in Kenya.</p>
+            <p>Since our inception, Savanna Circuit has been dedicated to improving the livelihoods of smallholder farmers across Kenya. Our innovative, Unbroken Cold Chain solutions have enabled farmers to reduce post-harvest losses, increase their income, and access new markets. Through partnerships with local organizations and governments, we have expanded our reach to over 50,000 farmers in 10 counties in Kenya.</p>
     </div>
     </section>
 
