--- a/store/products/bmc-hybrid.html
+++ b/store/products/bmc-hybrid.html
@@ -6,7 +6,7 @@
     <!-- SEO Meta Tags -->
     <title>MaziwaPlus Bulk Milk Chiller (Hybrid) - Savanna Circuit Store</title>
     <meta name="description" content="Shop the MaziwaPlus Bulk Milk Chiller (Hybrid). A solar-powered milk cooling system with grid/generator backup for cooperative hubs and aggregation centers.">
-    <meta name="keywords" content="Bulk Milk Chiller, Dairy cold chain solutions, solar milk cooling, pre-cooling systems, Hybrid Milk Cooler, dairy cooling, milk collection center, cooperative dairy equipment, solar cooling, Savanna Circuit, Kenya, glycol chiller, milk preservation,">
+    <meta name="keywords" content="Dairy cold chain solutions, solar milk cooling, pre-cooling systems, Bulk Milk Chiller, Hybrid Milk Cooler, dairy cooling, milk collection center, cooperative dairy equipment, solar cooling, Savanna Circuit, Kenya, glycol chiller, milk preservation">
     <link rel="canonical" href="../../store/products/bmc-hybrid.html">
 
     <!-- Open Graph / Social Media -->
@@ -17,30 +17,6 @@
     <meta property="og:url" content="../../store/products/bmc-hybrid.html">
     <meta property="og:site_name" content="Savanna Circuit Store">
 
-    <!-- Structured Data (Schema.org) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org/",
-      "@type": "Product",
-      "name": "MaziwaPlus Bulk Milk Chiller (Hybrid)",
-      "image": [
-        "../../assets/images/hybrid-bmc.webp"
-       ],
-      "description": "Designed for cooperative hubs and milk collection centers, Bulk Milk Chillers rapidly chill and store large volumes of milk. Powered by solar with hybrid backup options.",
-      "brand": {
-        "@type": "Brand",
-        "name": "Savanna Circuit"
-      },
-      "sku": "BMC-HYBRID",
-      "offers": {
-        "@type": "Offer",
-        "url": "../../store/products/bmc-hybrid.html",
-        "priceCurrency": "KES",
-        "availability": "https://schema.org/InStock",
-        "itemCondition": "https://schema.org/NewCondition"
-      }
-    }
-    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
@@ -78,7 +54,7 @@
                     <div class="product-info-section">
                       <h2>Bulk Milk Chiller (Hybrid)</h2>
                         <div class="product-summary">
-                          <p>Designed for cooperative hubs and milk collection centers, Bulk Milk Chillers rapidly chill and store large volumes of milk, safeguarding quality from farm to processor. Powered by solar with hybrid backup options, they provide dependable, hygienic bulk milk handling in off-grid or grid-limited areas.</p>
+                          <p>Designed for cooperative hubs and milk collection centers, Bulk Milk Chillers rapidly chill and store large volumes of milk, safeguarding quality from farm to processor. Powered by solar with hybrid backup options, they provide dependable, hygienic bulk milk handling in off-grid or grid-limited areas, maintaining an Unbroken Cold Chain.</p>
                         </div>
                     </div>
                     
