--- a/store/products/eco-sav-bags.html
+++ b/store/products/eco-sav-bags.html
@@ -6,7 +6,7 @@
     <!-- SEO Meta Tags -->
     <title>EcoSav Bags - Savanna Circuit Store</title>
     <meta name="description" content="Shop EcoSav Bags. Durable, insulated carry packs for transporting fish and produce. Use with chilled glycol packs for extended freshness.">
-    <meta name="keywords" content="EcoSav Bags, insulated fish bags,Fish cold chain solutions, solar fish cooling, landing site chilling, produce transport bags, cold chain bags, fish preservation, Savanna Circuit, Kenya">
+    <meta name="keywords" content="Fish cold chain solutions, solar fish cooling, landing site chilling, EcoSav Bags, insulated fish bags, produce transport bags, cold chain bags, fish preservation, Savanna Circuit, Kenya">
     <link rel="canonical" href="../../store/products/eco-sav-bags.html">
 
     <!-- Open Graph / Social Media -->
@@ -17,30 +17,6 @@
     <meta property="og:url" content="../../store/products/eco-sav-bags.html">
     <meta property="og:site_name" content="Savanna Circuit Store">
 
-    <!-- Structured Data (Schema.org) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org/",
-      "@type": "Product",
-      "name": "EcoSav Bags",
-      "image": [
-        "../../assets/images/eco-sav-bag-1.webp"
-       ],
-      "description": "EcoSav Bags are durable, insulated carry packs designed for transporting fish and produce in cooled conditions using glycol ice ladder packs.",
-      "brand": {
-        "@type": "Brand",
-        "name": "Savanna Circuit"
-      },
-      "sku": "ECO-SAV-BAGS",
-      "offers": {
-        "@type": "Offer",
-        "url": "../../store/products/eco-sav-bags.html",
-        "priceCurrency": "KES",
-        "availability": "https://schema.org/InStock",
-        "itemCondition": "https://schema.org/NewCondition"
-      }
-    }
-    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
@@ -79,7 +55,7 @@
                     <div class="product-info-section">
                            <h2>EcoSav Bags</h2>
                       <div class="product-summary">
-                          <p>EcoSav Bags are durable, insulated carry packs designed for transporting fish and produce in cooled conditions. Used together with ladder packs filled with chilled glycol water from Ice Water Dispensers, they preserve freshness, reduce spoilage, and deliver high-quality products to market.</p>
+                          <p>EcoSav Bags are durable, insulated carry packs designed for transporting fish and produce in cooled conditions. Used together with ladder packs filled with chilled glycol water from Ice Water Dispensers, they preserve freshness, reduce spoilage, and deliver high-quality products to market, ensuring an Unbroken Cold Chain.</p>
                       </div> 
                     </div>
 
