--- a/store/products/iwd-ice-water-dispenser.html
+++ b/store/products/iwd-ice-water-dispenser.html
@@ -6,7 +6,7 @@
     <!-- SEO Meta Tags -->
     <title>Ice Water Dispenser (IWD) - Savanna Circuit Store</title>
     <meta name="description" content="Shop the Ice Water Dispenser (IWD). Solar-powered chilled glycol water dispenser for first-mile cold chain cooling of milk and fish.">
-    <meta name="keywords" content="Ice Water Dispenser, IWD, solar water chiller,Solar ice water cooling, ice water milk cooling, low-energy cooling system, glycol chiller, last mile cooling,Fish cold chain solutions, solar fish cooling, landing site chilling milk cooling, fish cooling, Savanna Circuit, Kenya">
+    <meta name="keywords" content="Solar ice water cooling, ice water milk cooling, low-energy cooling system, Ice Water Dispenser, IWD, solar water chiller, glycol chiller, last mile cooling, Fish cold chain solutions, solar fish cooling, landing site chilling, Savanna Circuit, Kenya">
     <link rel="canonical" href="../../store/products/iwd-ice-water-dispenser.html">
 
     <!-- Open Graph / Social Media -->
@@ -17,30 +17,6 @@
     <meta property="og:url" content="../../store/products/iwd-ice-water-dispenser.html">
     <meta property="og:site_name" content="Savanna Circuit Store">
 
-    <!-- Structured Data (Schema.org) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org/",
-      "@type": "Product",
-      "name": "Ice Water Dispenser (IWD)",
-      "image": [
-        "../../assets/images/iwd.webp"
-       ],
-      "description": "The Stationary Ice Water Dispenser is a digitally controlled, solar-powered chilling system that produces and stores food-grade glycol-cooled water for cooling packs.",
-      "brand": {
-        "@type": "Brand",
-        "name": "Savanna Circuit"
-      },
-      "sku": "IWD-DISPENSER",
-      "offers": {
-        "@type": "Offer",
-        "url": "../../store/products/iwd-ice-water-dispenser.html",
-        "priceCurrency": "KES",
-        "availability": "https://schema.org/InStock",
-        "itemCondition": "https://schema.org/NewCondition"
-      }
-    }
-    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
@@ -80,7 +56,7 @@
                            <h2>Ice Water Dispenser (IWD)</h2>
                     </div>
                       <div class="product-summary">
-                          <p>The Stationary Ice Water Dispenser is a digitally controlled, solar-powered chilling system that produces and stores food-grade glycol-cooled water. This chilled water is used to cool milk, fish, and other perishables through closed-loop cold packs (ladder packs or thermocores). It acts as a mini cold chain anchor for farmers, fisherfolk, and vendors with limited access to full refrigeration.</p>
+                          <p>The Stationary Ice Water Dispenser is a digitally controlled, solar-powered chilling system that produces and stores food-grade glycol-cooled water. Featuring our proprietary <strong>ThermoDam™</strong> technology for superior thermal storage, it ensures uptime scalability and low-energy cooling. This chilled water is used to cool milk, fish, and other perishables through closed-loop cold packs (ladder packs or thermocores), acting as a mini anchor for an Unbroken Cold Chain.</p>
                        </div>
 
                     <div class="product-quick-specs">
