--- a/store/products/maziwaplus-prechiller-300.html
+++ b/store/products/maziwaplus-prechiller-300.html
@@ -6,7 +6,7 @@
     <!-- SEO Meta Tags -->
     <title>MaziwaPlus Prechillers 300-1000L - Savanna Circuit Store</title>
     <meta name="description" content="Shop MaziwaPlus Prechillers (300-1000L). Entry-level hybrid milk chilling solution for small to medium-sized dairy operations.">
-    <meta name="keywords" content="MaziwaPlus Prechiller, milk chiller 300L, hybrid milk cooler, dairy cooling Kenya, small scale dairy equipment,Dairy cold chain solutions, solar milk cooling, pre-cooling systems, Solar cold chain system, integrated cold chain solution,  Savanna Circuit">
+    <meta name="keywords" content="Dairy cold chain solutions, solar milk cooling, pre-cooling systems, MaziwaPlus Prechiller, milk chiller 300L, hybrid milk cooler, dairy cooling Kenya, small scale dairy equipment, Solar cold chain system, integrated cold chain solution, Savanna Circuit">
     <link rel="canonical" href="../../store/products/maziwaplus-prechiller-300.html">
 
     <!-- Open Graph / Social Media -->
@@ -17,30 +17,6 @@
     <meta property="og:url" content="../../store/products/maziwaplus-prechiller-300.html">
     <meta property="og:site_name" content="Savanna Circuit Store">
 
-    <!-- Structured Data (Schema.org) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org/",
-      "@type": "Product",
-      "name": "MaziwaPlus Prechillers 300-1000L",
-      "image": [
-        "../../assets/images/m-pre-chiller.webp"
-       ],
-      "description": "The MaziwaPlus Prechillers is an entry-level hybrid milk chilling solution designed for small to medium-sized dairy operations.",
-      "brand": {
-        "@type": "Brand",
-        "name": "Savanna Circuit"
-      },
-      "sku": "MP-PRECHILLER-300",
-      "offers": {
-        "@type": "Offer",
-        "url": "../../store/products/maziwaplus-prechiller-300.html",
-        "priceCurrency": "KES",
-        "availability": "https://schema.org/InStock",
-        "itemCondition": "https://schema.org/NewCondition"
-      }
-    }
-    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
@@ -83,7 +59,7 @@
                     <h2>MaziwaPlus Prechillers 300-1000L</h2>
                 </div>
                     <div class="product-summary">
-                        <p>The MaziwaPlus Prechillers is an entry-level hybrid milk chilling solution designed for small to medium-sized dairy operations. It efficiently cools and stores milk while reducing operational costs through intelligent solar integration.</p>
+                        <p>The MaziwaPlus Prechillers is an entry-level hybrid milk chilling solution designed for small to medium-sized dairy operations. It efficiently cools and stores milk while reducing operational costs through intelligent solar integration, ensuring an Unbroken Cold Chain.</p>
                     </div>                
                     <div class="product-quick-specs">
                         <h3>Quick Specs</h3>
