--- a/store/products/maziwaplus-prechiller-pro.html
+++ b/store/products/maziwaplus-prechiller-pro.html
@@ -6,7 +6,7 @@
     <!-- SEO Meta Tags -->
     <title>MaziwaPlus Prechillers Pro 200-2000L - Savanna Circuit Store</title>
     <meta name="description" content="Shop MaziwaPlus Prechillers Pro (200-2000L). Advanced hybrid milk chilling with smart IoT monitoring for commercial dairy operations.">
-    <meta name="keywords" content="MaziwaPlus Prechiller Pro, smart milk chiller, hybrid dairy cooling, IoT dairy monitoring, commercial milk cooler,Dairy cold chain solutions, solar milk cooling, pre-cooling systems, Solar cold chain system, integrated cold chain solution,  Savanna Circuit, Kenya">
+    <meta name="keywords" content="Dairy cold chain solutions, solar milk cooling, pre-cooling systems, MaziwaPlus Prechiller Pro, smart milk chiller, hybrid dairy cooling, IoT dairy monitoring, commercial milk cooler, Solar cold chain system, integrated cold chain solution, Savanna Circuit, Kenya">
     <link rel="canonical" href="../../store/products/maziwaplus-prechiller-pro.html">
 
     <!-- Open Graph / Social Media -->
@@ -17,30 +17,6 @@
     <meta property="og:url" content="../../store/products/maziwaplus-prechiller-pro.html">
     <meta property="og:site_name" content="Savanna Circuit Store">
 
-    <!-- Structured Data (Schema.org) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org/",
-      "@type": "Product",
-      "name": "MaziwaPlus Prechillers Pro 200-2000L",
-      "image": [
-        "../../assets/images/pre-chillers-pro.webp"
-       ],
-      "description": "The advanced MaziwaPlus Prechillers Pro features smart M+ DMS monitoring, superior temperature precision, and enhanced capacity range.",
-      "brand": {
-        "@type": "Brand",
-        "name": "Savanna Circuit"
-      },
-      "sku": "MP-PRECHILLER-PRO",
-      "offers": {
-        "@type": "Offer",
-        "url": "../../store/products/maziwaplus-prechiller-pro.html",
-        "priceCurrency": "KES",
-        "availability": "https://schema.org/InStock",
-        "itemCondition": "https://schema.org/NewCondition"
-      }
-    }
-    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
@@ -81,7 +57,7 @@
                 <div class="product-info-section">
                     <h2>MaziwaPlus Prechillers Pro 300-2000L</h2>
                     <div class="product-summary">
-                        <p>The advanced MaziwaPlus Prechillers Pro features smart M+ DMS monitoring, superior temperature precision, and enhanced capacity range. Ideal for commercial dairy operations seeking maximum efficiency and real-time operational insights.</p>
+                        <p>The advanced MaziwaPlus Prechillers Pro features smart M+ DMS monitoring, superior temperature precision, and enhanced capacity range. Ideal for commercial dairy operations seeking maximum efficiency, real-time operational insights, and an Unbroken Cold Chain.</p>
                     </div>
                     <div class="product-quick-specs">
                         <h3>Quick Specs</h3>
