--- a/store/products/nomad-cans-10l.html
+++ b/store/products/nomad-cans-10l.html
@@ -6,7 +6,7 @@
         <!-- SEO Meta Tags -->
     <title>Nomad Cans 10L - Portable Solar Milk Chiller | Savanna Circuit Store</title>
     <meta name="description" content="Buy Nomad Cans 10L, a durable and portable milk chiller designed for small-scale farmers. Keep milk fresh during transport with high-efficiency thermal retention.">
-    <meta name="keywords" content="Nomad Cans 10L, portable milk chiller, dairy transport, milk can, solar cooling,Milk transport cooling container, insulated milk can, mobile cold chain container,Savanna Circuit, Kenya dairy equipment">
+    <meta name="keywords" content="Milk transport cooling container, insulated milk can, mobile cold chain container, Nomad Cans 10L, portable milk chiller, dairy transport, milk can, solar cooling, Savanna Circuit, Kenya dairy equipment">
     <link rel="canonical" href="https://sav-circuit.com/store-app/products-detailed/nomad-cans-10l.html">
 
     <!-- Open Graph / Social Media -->
@@ -17,30 +17,6 @@
     <meta property="og:url" content="../../store/products/nomad-cans-10l.html">
     <meta property="og:site_name" content="Savanna Circuit Store">
 
-    <!-- Structured Data (Schema.org) for Rich Snippets -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org/",
-      "@type": "Product",
-      "name": "Nomad Cans 10L",
-      "image": [
-        "../../assets/images/nomad 10.png"
-       ],
-      "description": "Durable portable container for mobile operations. Lightweight and efficient for small-scale farmers.",
-      "brand": {
-        "@type": "Brand",
-        "name": "Savanna Circuit"
-      },
-      "sku": "NOMAD-10L",
-      "offers": {
-        "@type": "Offer",
-        "url": "../../store/products/nomad-cans-10l.html",
-        "priceCurrency": "KES",
-        "availability": "https://schema.org/InStock",
-        "itemCondition": "https://schema.org/NewCondition"
-      }
-    }
-    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
@@ -81,7 +57,7 @@
                  <div class="product-info-section">
                         <h2>Nomad Can 10L</h2>
                      <div class="product-summary">
-                         <p>Nomad Cans are patented, insulated food-grade containers designed for the safe transport of milk. Built for modular use with Ice Water Dispensers (IWD) or mobile trikes, these cans maintain optimal temperature using a chilled glycol thermocore insert.</p>
+                         <p>Nomad Cans are patented, insulated food-grade containers designed for the safe transport of milk. Enabling "Cooling on the Go", they displace diesel-heavy logistics with decarbonized, efficient transport. Built for modular use with Ice Water Dispensers (IWD) or mobile trikes, these cans maintain optimal temperature using a chilled glycol thermocore insert, ensuring an Unbroken Cold Chain.</p>
                      </div> 
                   </div>
 
