--- a/store/products/nomad-cans-25l.html
+++ b/store/products/nomad-cans-25l.html
@@ -6,7 +6,7 @@
     <!-- SEO Meta Tags -->
     <title>Nomad Cans 25L - Mid-Capacity Milk Chiller | Savanna Circuit Store</title>
     <meta name="description" content="Shop the Nomad Cans 25L, the perfect mid-capacity milk chiller for cooperatives and medium-scale farms. Ensures milk quality during transport.">
-    <meta name="keywords" content="Nomad Cans 25L, milk chiller, dairy transport, Milk transport cooling container, insulated milk can, mobile cold chain container, cooperative equipment, solar cooling, Savanna Circuit, Kenya">
+    <meta name="keywords" content="Milk transport cooling container, insulated milk can, mobile cold chain container, Nomad Cans 25L, milk chiller, dairy transport, cooperative equipment, solar cooling, Savanna Circuit, Kenya">
     <link rel="canonical" href="../../store/products/nomad-cans-25l.html">
 
     <!-- Open Graph / Social Media -->
@@ -17,30 +17,6 @@
     <meta property="og:url" content="../../store/products/nomad-cans-25l.html">
     <meta property="og:site_name" content="Savanna Circuit Store">
 
-    <!-- Structured Data (Schema.org) for Rich Snippets -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org/",
-      "@type": "Product",
-      "name": "Nomad Cans 25L",
-      "image": [
-        "../../assets/images/Nomad 25.png"
-       ],
-      "description": "The Nomad Cans 25L provides mid-range capacity for farm cooperatives and larger dairy operations. Its enhanced thermal insulation maintains milk quality during medium-distance transport.",
-      "brand": {
-        "@type": "Brand",
-        "name": "Savanna Circuit"
-      },
-      "sku": "NOMAD-25L",
-      "offers": {
-        "@type": "Offer",
-        "url": "../../store/products/nomad-cans-25l.html",
-        "priceCurrency": "KES",
-        "availability": "https://schema.org/InStock",
-        "itemCondition": "https://schema.org/NewCondition"
-      }
-    }
-    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
@@ -79,7 +55,7 @@
                    <div class="product-info-section">
                         <h2>Nomad Cans 25L</h2>
                       <div class="product-summary">
-                        <p>The Nomad Cans 25L provides mid-range capacity for farm cooperatives and larger dairy operations. Its enhanced thermal insulation maintains milk quality during medium-distance transport.</p>
+                        <p>The Nomad Cans 25L provides mid-range capacity for farm cooperatives and larger dairy operations. Its enhanced thermal insulation maintains milk quality during medium-distance transport. Designed for "Cooling on the Go", it supports decarbonized logistics and an Unbroken Cold Chain.</p>
                        </div>   
                    </div> 
 
