--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Learn about Savanna Circuit's mission to empower farmers through climate-Tech  innovation and Manufacturing. Meet our team and discover our values and approach.">
-    <meta name="keywords" content="Solar Cold Chain company Africa,Savanna Circuit team, mission, vision, agricultural innovation, Climate-tech Manufacturing">
+    <meta name="keywords" content="Solar cold chain company Africa, climate-tech manufacturing, Savanna Circuit team, mission, vision, agricultural innovation">
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
@@ -40,7 +40,7 @@
     <!-- Content is inside a protective "Glass" card -->
     <div class="hero-lead-card">
  <h1>Team</h1>
-    <p>Solar Cold Chain Company Empowering farmers through innovation, technology, and sustainable solutions</p>
+    <p>Solar Cold Chain Company empowering farmers through innovation, technology, and sustainable solutions. Africa-built, Global-relevance.</p>
     </div>
 </section>
    <!-- About Navigation Tabs -->
@@ -80,9 +80,9 @@
       <div class="mvv-grid">
         <div class="mvv-item" id="mission">
           <h2>Mission</h2>
-          <p>To empower youth and smallholder farmers with innovative, sustainable unbroken cold chain solutions that increase productivity, reduce losses, improve livelihoods, and create economic opportunities.</p>
+          <p>To bring limitless ingenuity for fellow Africans with a global perspective.</p>
           <h2>Vision</h2>
-          <p>A thriving agricultural ecosystem where farmers have access to cutting-edge technology, quality products, and expert support to build sustainable, profitable farms.</p>
+          <p>To revolutionize agriculture value chains, bridging critical gaps and empowering farmers with tailored solutions.</p>
         </div>
         <div class="mvv-item" id="values">
           <h2>Our Values</h2>
