--- a/careers.html
+++ b/careers.html
@@ -112,72 +112,48 @@
     <!-- Application Form -->
     <section id="apply" class="careers-section alternate-bg">
         <div class="section-container">
-            <h2>Apply Now</h2>
+            <h2 class="text-center">Interested in working with us?</h2>
             <div class="application-form-container">
-                <form class="large-form">
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label>Full Name</label>
-                            <input type="text" placeholder="Your full name" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" placeholder="your@email.com" required>
-                        </div>
+                <p>As we grow, new roles open across our teams at different times. If you don’t see a role that fits right now, you can still register your interest below.</p>
+                <p>If you’d like to be considered for future opportunities, answer the short questions below. We care more about how you think than perfect CVs.</p>
+
+                <div class="fit-check-section">
+                    <h3 class="fit-check-title">A quick fit check</h3>
+                    <div class="question-block">
+                        <label for="answer1" class="question-label">1. The Nomad Factor</label>
+                        <p class="question-desc">What’s the hardest problem you’ve personally solved in a resource-constrained environment?</p>
+                        <textarea id="answer1" rows="4" class="question-input" placeholder="Type your answer here..."></textarea>
                     </div>
 
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label>Phone Number</label>
-                            <input type="tel" placeholder="Your phone number" required>
-                        </div>
-                        <div class="form-group">
-                            <label>LinkedIn Profile</label>
-                            <input type="url" placeholder="https://linkedin.com/in/yourprofile" required>
-                        </div>
+                    <div class="question-block">
+                        <label for="answer2" class="question-label">2. Future Fit</label>
+                        <p class="question-desc">If you joined a team building practical, off-grid systems, what’s the first assumption or improvement you’d want to validate — and why?</p>
+                        <textarea id="answer2" rows="4" class="question-input" placeholder="Type your answer here..."></textarea>
                     </div>
 
-                    <div class="form-group">
-                        <label>Position Applying For</label>
-                        <select required>
-                            <option>Select a position</option>
-                            <option>Product Manager</option>
-                            <option>Software Engineer</option>
-                            <option>Field Support Engineer</option>
-                            <option>Sales Representative</option>
-                            <option>Marketing Manager</option>
-                            <option>Data Analyst</option>
-                            <option>Open Application</option>
-                        </select>
+                    <div class="question-block">
+                        <label for="answer3" class="question-label">3. Availability</label>
+                        <p class="question-desc">Are you looking for a role now, or would you like to be considered over the next 6–12 months?</p>
+                        <textarea id="answer3" rows="2" class="question-input" placeholder="Type your answer here..."></textarea>
                     </div>
 
-                    <div class="form-group">
-                        <label>Cover Letter</label>
-                        <textarea placeholder="Tell us about yourself and why you want to join Savanna Circuit" rows="6" required></textarea>
+                    <div class="submission-actions">
+                        <button id="checkAnswersBtn" class="cta-button primary large">Proceed to Submission</button>
+                        <p id="answerError" class="answer-error">Please answer all questions to proceed.</p>
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        <label>Upload CV/Resume</label>
-                        <input type="file" accept=".pdf,.doc,.docx" required>
+                <div id="submission-details" class="submission-details">
+                    <h3>Submit Your Application</h3>
+                    <div class="cv-drop-zone">
+                         <p class="cv-drop-label"><strong>Drop your CV here</strong></p>
+                         <input type="file" id="cvUpload" class="cv-file-input">
+                         <p class="cv-note">(Note: Please attach this file manually in your email client after clicking submit)</p>
                     </div>
-
-                    <div class="form-group">
-                        <label>Experience Level</label>
-                        <select required>
-                            <option>Select level</option>
-                            <option>Entry Level (0-2 years)</option>
-                            <option>Mid Level (2-5 years)</option>
-                            <option>Senior (5+ years)</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group checkbox">
-                        <input type="checkbox" id="agree" required>
-                        <label for="agree">I agree to be contacted regarding my application</label>
-                    </div>
-
-                    <button type="submit" class="cta-button primary large">Submit Application</button>
-                </form>
+                    <p>We review all submissions, but may not respond immediately.</p>
+                    <a id="finalSubmitBtn" href="#" class="cta-button secondary large submit-email-btn">Submit Application via Email</a>
+                    <p class="email-note">Your answers will be automatically copied to the email body.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -186,31 +162,5 @@
   <div id="footer-placeholder"></div>
   
     <script src="assets/js/main.js"></script>
-    <script>
-        // Dynamic Job Loader
-        document.addEventListener('DOMContentLoaded', () => {
-            fetch('assets/data/jobs.json')
-                .then(response => response.json())
-                .then(data => {
-                    const container = document.getElementById('jobs-container');
-                    if (data.length > 0) {
-                        container.innerHTML = data.map(job => `
-                            <div class="job-card">
-                                <h3>${job.title}</h3>
-                                <p class="job-type">${job.type}</p>
-                                <p>${job.description}</p>
-                                <a href="${job.applyLink}" class="cta-button primary">Apply Now</a>
-                            </div>
-                        `).join('');
-                    } else {
-                        container.innerHTML = '<p>No open positions at this time.</p>';
-                    }
-                })
-                .catch(error => {
-                    console.error('Error loading jobs:', error);
-                    document.getElementById('jobs-container').innerHTML = '<p>Unable to load job listings.</p>';
-                });
-        });
-    </script>
 </body>
 </html>
