--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore Savanna Circuit's range of Unbroken cold chain solutions and agricultural products. From milk chillers and dryers to dairy management software and fish cold chain solutions.">
-    <meta name="keywords" content="Unbroken Cold Chain, solar milk chiller, Last mile mobilitity, SOLAR-THRIVE, Dairy & Fish Cold Chain, agricultural dryers, farm management software">
+    <meta name="keywords" content="Solar cold chain system, integrated cold chain solution, Unbroken Cold Chain, solar milk chiller, Last mile mobilitity, SOLAR-THRIVE, Dairy & Fish Cold Chain, agricultural dryers, farm management software">
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
@@ -51,7 +51,7 @@
             <div id="SOLAR-THRIVE" class="product-category">
                  <h3 class="category-title">
                     <span class="visually-hidden">SOLAR THRIVE Collection</span>
-                    <img src="assets/images/solar-thrive-logo.webp" alt="SOLAR THRIVE - Portable Solar Cooling Solutions" style="max-width: 300px; height: auto; display: block; margin-bottom: 1.5rem;">
+                    <img src="assets/images/solar-thrive-logo.webp" alt="SOLAR THRIVE - Portable Solar Cooling Solutions" class="thrive-header-logo">
                  </h3>
                 <div class="products-grid">
                     <div class="product-card" data-product="nomad-cans-10l">
@@ -218,25 +218,20 @@
                     </div>
                 </div>
             </div>          
-        </div>
-    </section>
-
-<section class="products-showcase">
-    <div class="section-container">
-        <div id="annual-product-catalogue" class="product-category">
-            <h3 class="category-title">Annual Product Catalogue</h3>
-            <div class="products-grid single-column">
-                <div class="product-card">
-                    <img class="product-image" src="../../assets/images/catalogue.webp" alt="Annual Product Catalogue 2026 Preview" loading="lazy" style="height: 250px;">
-                    <h4>Annual Product Catalogue 2026 <span class="badge" style="font-size: 0.7rem; vertical-align: middle; margin-left: 8px;">New 2026</span></h4>
-                    <p class="product-description">Explore our full 2026 collection, including technical specs and pricing.<br><small>PDF (2.1 MB) • 4 Pages</small></p>
-                    <div class="product-actions">
-                        <a href="../../assets/images/SCT_Product Profile.pdf" download="Savanna_Circuit_Catalogue_2026.pdf" class="cta-button primary">Download Catalogue</a>
+            <div id="annual-product-catalogue" class="product-category">
+                <h3 class="category-title">Annual Product Catalogue</h3>
+                <div class="products-grid single-column">
+                    <div class="product-card">
+                        <img class="product-image catalogue-preview" src="assets/images/catalogue.webp" alt="Annual Product Catalogue 2026 Preview" loading="lazy">
+                        <h4>Annual Product Catalogue 2026 <span class="badge">New 2026</span></h4>
+                        <p class="product-description">Explore our full 2026 collection, including technical specs and pricing.<br><small>PDF (2.1 MB) • 4 Pages</small></p>
+                        <div class="product-actions">
+                            <a href="assets/images/catalogue.pdf" download="Savanna_Circuit_Catalogue_2026.pdf" class="cta-button primary">Download Catalogue</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 </section>
 
     
