deletd some images and  re-checked the image paths

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 <section class="hero-modern">
     <!-- Background image now replaces the video -->
     <div class="hero-background">
-        <img src="assets/images/team.webp" alt="News and Stories background" class="bg-media" loading="lazy">
+        <img src="assets/images/team-2.webp" alt="News and Stories background" class="bg-media" loading="lazy">
     </div>
 
     <!-- Content is inside a protective "Glass" card -->
