--- a/store/index.html
+++ b/store/index.html
@@ -90,13 +90,13 @@
 
                     <!-- Product: Nomad Cans 25L -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../../assets/images/Nomad-25.webp" alt="Nomad Cans 25L">
+                        <img class="product-image" loading="lazy" src="../../assets/images/nomad-25.webp" alt="Nomad Cans 25L">
                         <h4>Nomad Cans - 25L</h4>
                         <p class="product-spec">Mid-capacity mobile cold chain container</p>
                         <p class="product-description">Perfect balance between capacity and portability for medium-scale cooling on the go farm operations.</p>
                         <div class="product-actions">
                             <a href="products/nomad-cans-25l.html" class="cta-button secondary">Learn More</a>
-                            <a href="#" class="cta-button primary add-to-cart" data-product="Nomad Cans - 25L">Add to Cart</a>
+                            <a href="#" class="cta-button primary add-to-cart" data-product="nomad Cans - 25L">Add to Cart</a>
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Cans%2025L" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
 
                     <!-- Product: Eco-Sav Thermal Bags -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../../assets/images/Eco-Sav-bag-1.webp" alt="Eco-Sav Thermal Bags">
+                        <img class="product-image" loading="lazy" src="../../assets/images/eco-sav-bag-1.webp" alt="Eco-Sav Thermal Bags">
                         <h4>Eco-Sav Thermal Bags</h4>
                         <p class="product-spec">Insulated Fish and produce transport bags</p>
                         <p class="product-description">Durable thermal bags for temperature-sensitive produce transport. Reusable and environmentally friendly.</p>
@@ -176,7 +176,7 @@
 
                     <!-- Product: MaziwaPlus Prechillers Pro 200-2000L -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../../assets/images/pre-chillers-PRO.webp" alt="MaziwaPlus Prechillers Pro 200-2000L">
+                        <img class="product-image" loading="lazy" src="../../assets/images/pre-chillers-pro.webp" alt="MaziwaPlus Prechillers Pro 200-2000L">
                         <h4>MaziwaPlus Prechillers Pro 200-2000L</h4>
                         <p class="product-spec">Advanced hybrid milk chiller</p>
                         <p class="product-description">Premium features for large farms  and milk collection centers. Enhanced efficiency with smart monitoring and analytics.</p>
