--- a/careers.html
+++ b/careers.html
@@ -139,11 +139,11 @@
 
                     <div class="submission-actions">
                         <button id="checkAnswersBtn" class="cta-button primary large">Proceed to Submission</button>
-                        <p id="answerError" class="answer-error">Please answer all questions to proceed.</p>
+                        <p id="answerError" class="answer-error" style="display: none;">Please answer all questions to proceed.</p>
                     </div>
                 </div>
 
-                <div id="submission-details" class="submission-details">
+                <div id="submission-details" class="submission-details" style="display: none;">
                     <h3>Submit Your Application</h3>
                     <div class="cv-drop-zone">
                          <p class="cv-drop-label"><strong>Drop your CV here</strong></p>
