Changed solar cooling system images and updated product page links and metadata. added policies and speak-up portal pages. added bulk buy option and  store options for sales inquiries. changed partner logos and team images. added mission and vision statements to about page.

--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/about.css" />
 </head>
 <body>
   <noscript>
@@ -68,7 +69,7 @@
         </div>
         <div class="content-block">
           <h3>Continued Partnerships & Improvements (2023 - To Date)</h3>
-          <p>Expanded  Cold Chain product offerings, deepened partnerships, and continuously improved technology and service delivery to maximize farmer impact.</p>
+          <p>Expanding Cold Chain product offerings such as SOLAR-THRIVE, deepening partnerships with processors, cooperatives and micro enterprises, and continuously improving technology and service delivery to maximize farmer impact.</p>
         </div>
       </div>
     </div>
@@ -77,22 +78,50 @@
   <!-- Mission, Vision, Values Section -->
   <section id="mission-vision-values" class="about-section">
     <div class="section-container">
-      <div class="mvv-grid">
-        <div class="mvv-item" id="mission">
+      <div class="mvv-modern-grid">
+        <div class="mvv-card mission">
           <h2>Mission</h2>
           <p>To bring limitless ingenuity for fellow Africans with a global perspective.</p>
+          <div style="position:absolute; right:-20px; bottom:-20px; opacity:0.1;">
+            <svg width="150" height="150" viewBox="0 0 24 24" fill="white"><path d="M12 2L2 7l10 5 10-5-10-5zm0 9l2.5-1.25L12 8.5l-2.5 1.25L12 11zm0 2.5l-5-2.5-5 2.5L12 22l10-8.5-5-2.5-5 2.5z"/></svg>
+          </div>
+        </div>
+        <div class="mvv-card vision">
           <h2>Vision</h2>
           <p>To revolutionize agriculture value chains, bridging critical gaps and empowering farmers with tailored solutions.</p>
+          <div style="position:absolute; right:-20px; bottom:-20px; opacity:0.1;">
+            <svg width="150" height="150" viewBox="0 0 24 24" fill="white"><path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/></svg>
+          </div>
         </div>
-        <div class="mvv-item" id="values">
-          <h2>Our Values</h2>
-          <ul class="values-list">
-            <li><strong>Innovation:</strong> Continuous improvement in product and service delivery</li>
-            <li><strong>Sustainability:</strong> Environmental and economic responsibility</li>
-            <li><strong>Farmer-Centric:</strong> Solutions designed with farmer needs in mind</li>
-            <li><strong>Impact:</strong> Measurable improvement in farmer livelihoods</li>
-            <li><strong>Integrity:</strong> Transparent and ethical business practices</li>
-          </ul>
+      </div>
+      <div class="values-modern-container">
+        <h2>Our Values</h2>
+        <div class="values-grid">
+          <div class="value-card innovation">
+            <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C8.13 2 5 5.13 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.87-3.13-7-7-7zm5.33 16.81L19 20.75C18.24 21.5 17.2 22 16 22H8c-1.2 0-2.24-.5-3-1.25l1.67-1.94c.53.5 1.25.81 2.04.81h6.58c.79 0 1.51-.31 2.04-.81z"/></svg></div>
+            <h3>Innovation</h3>
+            <p>Continuous improvement in product and service delivery</p>
+          </div>
+          <div class="value-card sustainability">
+            <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M17 8C8 10 5.9 16.17 3.82 21.34l1.89.66l.95-2.3c.48.17.98.3 1.34.3C19 20 22 3 22 3c-1 2-8 2.25-13 3.25S2 11.5 2 13.5s1.75 3.75 1.75 3.75C7 8 17 8 17 8z"/></svg></div>
+            <h3>Sustainability</h3>
+            <p>Environmental and economic responsibility</p>
+          </div>
+          <div class="value-card farmer">
+            <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg></div>
+            <h3>Farmer-Centric</h3>
+            <p>Solutions designed with farmer needs in mind</p>
+          </div>
+          <div class="value-card impact">
+            <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/></svg></div>
+            <h3>Impact</h3>
+            <p>Measurable improvement in farmer livelihoods</p>
+          </div>
+          <div class="value-card integrity">
+            <div class="value-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"/></svg></div>
+            <h3>Integrity</h3>
+            <p>Transparent and ethical business practices</p>
+          </div>
         </div>
       </div>
     </div>
