--- a/index.html
+++ b/index.html
@@ -173,10 +173,8 @@
       <div class="partners-carousel" aria-label="Partners logo carousel">
         <div class="partners-track">
           <!-- Existing Logos -->
-          <a class="partner-logo-item" href="https://www.amref.org/" target="_blank" rel="noopener"><img src="assets/images/download-amref-logo.webp" alt="Amref" loading="lazy" /></a>
           <a class="partner-logo-item" href="https://www.mercycorps.org/" target="_blank" rel="noopener"><img src="assets/images/mercy-corps.webp" alt="Mercy Corps" loading="lazy" /></a>
-          <a class="partner-logo-item" href="https://www.usaid.gov/" target="_blank" rel="noopener"><img src="assets/images/logo-usaid-1-jpg.webp" alt="USAID" loading="lazy" /></a>
-          <a class="partner-logo-item" href="https://www.rti.org/" target="_blank" rel="noopener"><img src="assets/images/logo-rti-jpg.webp" alt="RTI" loading="lazy" /></a>
+          <a class="partner-logo-item" href="https://www.rti.org/" target="_blank" rel="noopener"><img src="assets/images/rti.webp" alt="RTI" loading="lazy" /></a>
           <a class="partner-logo-item" href="https://www.murang'a.go.ke/" target="_blank" rel="noopener"><img src="assets/images/logo-muranga-county-jpg.webp" alt="Murang'a County" loading="lazy" /></a>
           <a class="partner-logo-item" href="https://energysavingtrust.org.uk/" target="_blank" rel="noopener"><img src="assets/images/energy-saving-trust-seeklogo.webp" alt="Energy Saving Trust" loading="lazy" /></a>
           <a class="partner-logo-item" href="https://efficiencyforaccess.org/" target="_blank" rel="noopener"><img src="assets/images/efficiency-for-access.webp" alt="Efficiency for Access" loading="lazy" /></a>
@@ -227,7 +225,7 @@
                 <p>Liters of Milk Preserved Daily</p>
             </div>
             <div class="impact-card">
-                <h3>5,000+</h3>
+                <h3>4,000+</h3>
                 <p>Jobs Created</p>
                     <span><h3>15+</h3></span>
                     <p>Counties & Regions</p>
