--- a/products.html
+++ b/products.html
@@ -160,21 +160,21 @@
                         <h4>Cooling as a Service (CaaS)</h4>
                         <p class="product-description">Pay monthly for  solar cooling services without purchasing equipment upfront. Includes installation, maintenance, and support. Fixed monthly fee based on capacity and usage. Ideal for cooperatives and aggregation centers.</p>
                         <div class="product-actions">
-                            <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20to%20apply%20for%20cooling%20as%20a%20Service" target="_blank" rel="noopener" class="cta-button secondary">Learn More</a>
+                            <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20to%20apply%20for%20cooling%20as%20a%20Service" target="_blank" rel="noopener" class="cta-button secondary">Speak to Sales</a>
                         </div>
                     </div>
                     <div class="product-card" data-category="financing-options">
                         <h4>Lease Programs</h4>
                         <p class="product-description">Lease  cold chain equipment with option to purchase, making solutions accessible to all. Low upfront cost with predictable monthly payments. Option to own at end of term. Flexible terms from 12–48 months.</p>
                         <div class="product-actions">
-                            <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20to%20apply%20for%20lease%20programs" target="_blank" rel="noopener" class="cta-button secondary">Learn More</a>
+                            <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20to%20apply%20for%20lease%20programs" target="_blank" rel="noopener" class="cta-button secondary">Speak to Sales</a>
                         </div>
                     </div>
                     <div class="product-card" data-category="financing-options">
                         <h4>Hybrid Financing</h4>
                         <p class="product-description">Customized cold chain payment plans tailored to your farm's needs and cash flow. Mix of upfront + subscription or lease. Structured for seasonality of income. Available for both equipment and software.</p>
                         <div class="product-actions">
-                            <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20to%20apply%20for%20Hybrid%20financing%20services" target="_blank" rel="noopener" class="cta-button secondary">Learn More</a>
+                            <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20to%20apply%20for%20Hybrid%20financing%20services" target="_blank" rel="noopener" class="cta-button secondary">Speak to Sales</a>
                         </div>
                     </div>
                 </div>
